Update URL Converter & Add Commands